decided to make a change log cuz why not (might forget some stuff or not update this)

9/23:
Changed the name of the game to 'Super Shape Bros'
attacks now move with the player that made them rather than being a static hazard
light attack now has a cooldown
player 2 is now a circle instead of a square (will eventually add different shapes to choose from that have different abilities)
changed how main platform collision works
when above 3 lives a counter shows extra lives
alt+f4/top right x now close the game instead of using the BFG attack

9/26:
made changes to how players are drawn
first version of a menu for charectar selection
added an allattack cooldown

9/27:
changes to how speed is changed when mid air and far from platform allowing for recovery
buttons in shape selection menu now work and change the players shape
stocks now resemble the players shape
started getting rid of magic numbers

10/3:
removed most magic numbers
made menu centered
made the first idle sprites for p1 and p2 triangle (not in game yet)

10/4
you can no longer use an attack to cancel out knockedback
added animated sprites for triangles